remove dist folders, css update

--- a/Memorizer.Web/wwwroot/scss/_modal.scss
+++ b/Memorizer.Web/wwwroot/scss/_modal.scss
@@ -9,6 +9,11 @@
     #findKey, #findValue {
         margin-right: 10px;
     }
+
+    .jsgrid-cell {
+        overflow: hidden;
+        text-overflow: ellipsis;
+    }
 }
 
 #addModal .modal-body {
