--- a/Memorizer.Web/wwwroot/scss/site.scss
+++ b/Memorizer.Web/wwwroot/scss/site.scss
@@ -23,6 +23,10 @@ body {
         left: 15px
     }
 
+    #messageBox {
+        display: none;
+    }
+
     #answerForm {
         visibility: hidden;
 
